# mechanex

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCS_TRAINING.md  Features.ipynb  Makefile  README.md  REFERENCE.md  auto-pipeline.ipynb  getting-started.ipynb  mechanex_demo.ipynb  pyproject.toml  requirements-dev.txt  serving-demo.ipynb  setup.py  test.md
.github/workflows/: changelog-check.yml  ci.yml  promote-to-staging.yml  release-train.yml  release.yml  workflow.yml
docs/: CI_CD.md  ENGINEERING_STANDARDS.md  OPERATIONS_RUNBOOK.md  RELEASE_PROCESS.md  TESTING.md
examples/: 01_local_first_quickstart.py  02_remote_quickstart.py  03_sampling_strategies.py  04_strict_json_policy.py  05_policy_compare_and_evaluate.py  06_local_steering_vectors.py  07_openai_compatible_server.py  08_hybrid_local_remote_toggle.py  09_sae_behavior_workflow.py  10_remote_policy_smoke.py  README.md  _example_utils.py
examples/data/: extraction_prompts.jsonl  sae_behavior_dataset.jsonl  steering_dataset.jsonl
mechanex/: __init__.py  base.py  cli.py  client.py  errors.py  generation.py  model.py  policy.py  raag.py  sae.py  serving.py  steering.py  training.py
mechanex/_training/: README.md  __init__.py  interfaces.py
mechanex/utils/: steering_opt.py
mechanix/: __init__.py  base.py  client.py  errors.py  generation.py  raag.py  steering.py
scripts/: update-openapi-spec.sh
tests/: test_api_contract.py  test_sdk_comprehensive.py  test_sdk_runtime.py
tests/fixtures/: backend-openapi.json
tests/integration/: test_mechanex_remote_integration.py
(+54 files in other folders)
