[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
pretty = true
check_untyped_defs = false
files = [
  "mechanex/client.py",
  "mechanex/base.py",
  "mechanex/generation.py",
  "mechanex/policy.py",
  "mechanex/steering.py",
  "mechanex/sae.py",
  "tests",
]

[tool.coverage.run]
branch = true
source = [
  "mechanex.client",
  "mechanex.generation",
  "mechanex.policy",
  "mechanex.steering",
  "mechanex.sae",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
